@@ -427,7 +427,8 @@ object *check_spell_known (object *op, const char *name)
  * matching spell object, or NULL. If we match multiple spells but don't get an exact match, we also return NULL.
  */
 object *lookup_spell_by_name(object *op,const char *spname) {
-    object *spob1=NULL, *spob;
+    object *spob1=NULL, *spob2=NULL, *spob;
+    int nummatch=0;
 
     if(spname==NULL) return NULL;
 
@@ -441,13 +442,27 @@ object *lookup_spell_by_name(object *op,const char *spname) {
                 if (strlen(spname) == strlen(spob->name))
                     /* Perfect match, return it. */
                     return spob;
-            if (spob1)
-                return NULL;
-            spob1 = spob;
+                nummatch++;
+                spob1 = spob;
+            } else if (!strncmp(spob->name, spname, strlen(spob->name))) {
+                /* if spells have ambiguous names, it makes matching
+                 * really difficult.  (eg, fire and fireball would
+                 * fall into this category).  It shouldn't be hard to
+                 * make sure spell names don't overlap in that fashion.
+                 */
+                if (spob2)
+                    LOG(llevError,"Found multiple spells with overlapping base names: %s, %s\n",
+                        spob2->name, spob->name);
+                spob2 = spob;
             }
         }
     }
-    return spob1;
+    /* if we have best match, return it.  Otherwise, if we have one match
+     * on the loser match, return that, otehrwise null
+     */
+    if (spob2) return spob2;
+    if (spob1 && nummatch == 1) return spob1;
+    return NULL;
 }
 
 /**
