@@ -15,6 +15,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Fix incorrect lookup_spell_by_name() that prevented eg marking runes to work.
+ server/spell_util.c
+Nicolas Weeger 2007-08-23
+
 Fix mistake in check logic, preventing from building connected items.
  server/build_map.c
 Nicolas Weeger 2007-08-23
